# notebooklm-py

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
docs/: architecture.md  auth-keepalive.md  cli-exit-codes.md  cli-reference.md  configuration.md  development.md  installation.md  migration-tier-12-to-13.md  python-api.md  refactor.md  rpc-development.md  rpc-reference.md  stability.md  test-suite-taxonomy-inventory.md  troubleshooting.md
docs/adr/: 0001-layered-core-seams-and-property-bridge-policy.md  0002-capability-protocol-pattern.md  0003-auth-facade-write-through.md  0007-test-monkeypatch-policy.md  0009-middleware-chain.md  0010-session-kernel-split.md  0012-implementation-surface-convention.md  0013-composable-session-capabilities.md  README.md
scripts/: check_rpc_health.py  test_taxonomy_inventory.py
src/notebooklm/: __init__.py  _artifacts.py  _chat_protocol.py  _core.py  _core_metrics.py  _core_rpc.py  _idempotency.py  _middleware.py  _note_service.py  _notes.py  _request_types.py  _session.py  _session_contracts.py  _session_init.py  _session_transport.py  _source_upload.py  _sources.py  _transport_drain.py  auth.py  client.py  exceptions.py  types.py
src/notebooklm/_auth/: __init__.py  extraction.py  headers.py  paths.py
src/notebooklm/_types/: artifacts.py  chat.py  common.py  sources.py
src/notebooklm/cli/: download.py
tests/: conftest.py
tests/_fixtures/: __init__.py  auth_seam.py  chain.py  fake_core.py  integration_allow_no_vcr_files.txt  integration_allow_no_vcr_nodeids.txt  integration_vcr_allow_no_vcr_nodeids.txt
tests/_lint/: test_integration_allow_no_vcr_allowlist.py  test_no_core_imports.py  test_no_forbidden_monkeypatches.py
tests/e2e/: conftest.py
tests/integration/: test_artifacts_integration.py  test_notebooks_integration.py  test_notes_idempotency.py  test_research_idempotency.py  test_sources_integration.py
tests/integration/concurrency/: test_refresh_cmd_race.py
tests/unit/: test_artifacts_coverage.py  test_artifacts_drift.py  test_auth_account.py  test_auth_cookie_policy.py  test_auth_cookie_save_race.py  test_auth_extraction.py  test_auth_keepalive.py  test_auth_refresh.py  test_auth_session.py  test_auth_storage.py  test_authed_transport.py  test_cassette_sanitizer.py  test_cassette_shapes.py  test_chain_fixtures.py  test_chat.py  test_chat_characterization.py  test_chat_passage_resolver.py  test_check_action_pinning.py  test_check_coverage_thresholds.py  test_check_rpc_health.py  test_check_workflow_secret_gates.py  test_ci_audit_scripts.py  test_ci_install_parity.py  test_claude_md_freshness.py  test_client.py  test_client_keepalive.py  test_concurrency_refresh_race.py  test_cookie_persistence.py  test_core_metrics.py  test_core_rpc.py  test_docstrings.py  test_e2e_conftest_options.py  test_e2e_marker_hook.py  test_get_summary_drift.py  test_init_order.py  test_install_docs.py  test_middleware_types.py  test_note_service.py  test_polling_registry.py  test_public_api_compat_audit.py  (+14 more)
tests/unit/cli/: test_cli_session_local.py  test_download.py  test_download_multi_artifact.py
tests/unit/concurrency/: test_auth_load_blocks_loop.py  test_loop_affinity_guard.py
